2010-01-26  Chris Fleizach  <cfleizach@apple.com>

        Unreviewed.

        Attempt to make this test pass on GTK.

        Add ability for image maps to be focused via tabbing
        https://bugs.webkit.org/show_bug.cgi?id=17513

        * fast/events/tab-imagemap.html:

2010-01-26  Chris Fleizach  <cfleizach@apple.com>

        Reviewed by Darin Adler.

        Add ability for image maps to be focused via tabbing
        https://bugs.webkit.org/show_bug.cgi?id=17513

        * fast/events/resources/tabindex-focus-blur-all.js:
        (test):
        (testProgrammaticFocus):
        * fast/events/tab-imagemap-expected.txt: Added.
        * fast/events/tab-imagemap.html: Added.
        * fast/events/tabindex-focus-blur-all-expected.txt:

2010-01-26  Simon Hausmann  <simon.hausmann@nokia.com>

        Reviewed by Holger Freyther.

        REGRESSION(r53835): Fix editing/pasteboard/paste-noscript-xhtml.xhtml
        https://bugs.webkit.org/show_bug.cgi?id=34157

        Add Qt specific result for this test that differs from the cross-platform
        result in only one character: In htmlcontent.html the href attribute value
        is http://www.cnn.com, which somehow becomes http://www.cnn.com/ in the cross
        platform result. With the Qt xml parser that attribute is somehow preserved
        and so our result does not have the trailing slash.

        * platform/qt/editing/pasteboard/paste-noscript-xhtml-expected.txt: Added.

2010-01-26  Kent Tamura  <tkent@chromium.org>

        Reviewed by Shinichiro Hamaji.

        Convert textarea-rows-cols.html to dumpAsText()
        https://bugs.webkit.org/show_bug.cgi?id=34074

        * fast/forms/script-tests/textarea-rows-cols.js: Added.
        * fast/forms/textarea-rows-cols-expected.txt: Added.
        * fast/forms/textarea-rows-cols.html:
        * platform/mac/fast/forms/textarea-rows-cols-expected.checksum: Removed.
        * platform/mac/fast/forms/textarea-rows-cols-expected.png: Removed.