@@ -1,5 +1,15 @@
 2010-01-26  Chris Fleizach  <cfleizach@apple.com>
 
+        One more attempt to get GTK version to pass.
+
+        Add ability for image maps to be focused via tabbing
+        https://bugs.webkit.org/show_bug.cgi?id=17513
+
+        * fast/events/tab-imagemap-expected.txt:
+        * fast/events/tab-imagemap.html:
+
+2010-01-26  Chris Fleizach  <cfleizach@apple.com>
+
         Unreviewed.
 
         Attempt to make this test pass on GTK.
